--- a/focos_NASA.ipynb
+++ b/focos_NASA.ipynb
@@ -290,7 +290,7 @@
       "execution_count": 5,
       "source": [
         "#Nasa Authorization\r\n",
-        "my_headers = {'Authorization' : 'Bearer {YWxpc3Nvbi5hbWFyYWw6WVd4cGMzTnZiaTVoYldGeVlXeEFhVzVsYldFdVltRXVaMjkyTG1KeToxNjI3MzA4NjEzOjhiZDhkOGM3OTlmMWUxMzVmMGM5ZGY1NjkxN2JhYmNhNzc3OGIzNGY}'}"
+        "my_headers = {'Authorization' : 'Bearer {**}'}"
       ],
       "outputs": [],
       "metadata": {
